--- a/scripts/shiny_t-size_process-plot-inputs.Rmd
+++ b/scripts/shiny_t-size_process-plot-inputs.Rmd
@@ -17,82 +17,81 @@ library(tidyverse)
 # Load data 
 
 ```{r}
-tsize.files <- list.files("../data/tumor-size/")
-
-tsize.raw <- lapply(tsize.files, function(x) read_excel(paste0("../data/tumor-size/", x)))
+tsizes <- read.csv("../data/2022-01-24_tumor-size_R-formatted.csv", stringsAsFactors = F)
 ```
 
 
 
-# Clean, format and create variables
+# Clean, format and create variables - Only from 1st run!
 
 ```{r functions}
-calcTumorVol <- function(tmp){
-  tmp %>%
-    mutate(tail.number = as.character(tail.number)) %>%
-    mutate(tumor.volume = (`tumor.length.(mm)` * (`tumor.width.(mm)`^2)) / 2,
-           tumor.volume = dplyr::if_else(is.na(tumor.volume),
-                                         true = 0,
-                                         false = tumor.volume)) %>%
-    group_by(tail.number, treatment.group, date) %>%
-    summarise(tumor.volume = sum(tumor.volume)) %>%
-    ungroup() %>%
-    mutate(time.point = as.numeric(as.factor((date))))  %>%
-    select(-date)
-}
+# calcTumorVol <- function(tmp){
+#   tmp %>%
+#     mutate(tail.number = as.character(tail.number)) %>%
+#     mutate(tumor.volume = (`tumor.length.(mm)` * (`tumor.width.(mm)`^2)) / 2,
+#            tumor.volume = dplyr::if_else(is.na(tumor.volume),
+#                                          true = 0,
+#                                          false = tumor.volume)) %>%
+#     group_by(tail.number, treatment.group, date) %>%
+#     summarise(tumor.volume = sum(tumor.volume)) %>%
+#     ungroup() %>%
+#     mutate(time.point = as.numeric(as.factor((date))))  %>%
+#     select(-date)
+# }
 ```
 
 ```{r}
-zero.vals <- c("n/a", "N/A")
-
-mim1 <- tsize.raw[[1]] %>%
-  mutate(`tumor.length.(mm)` = ifelse(is.na(`tumor.length.(mm)`), 0, `tumor.length.(mm)`),
-          `tumor.width.(mm)` = ifelse(is.na(`tumor.width.(mm)`), 0, `tumor.width.(mm)`)) %>%
-  mutate(condition = dplyr::if_else(grepl("v3", microbiome.sample),
-                                   true = "mimic1.pre-DI",
-                                   false = "mimic1.post-DI"),
-         treatment.group = paste(treatment, condition, sep = " x ")) %>%
-  calcTumorVol()
-
-mim2 <- tsize.raw[[2]] %>%
-  drop_na(`tumor.length.(mm)`) %>%
-  mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
-         `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
-  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
-         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
-         treatment.group = paste(gsub(".-(.*)", "\\1", `cage (treatment)`),
-                                 microbiome.sample, sep = " x ")) %>%
-  calcTumorVol()
-
-# Problem: need to split mouse ids by cage
-mim3 <- tsize.raw[[3]] %>%
-  drop_na(`tumor.length.(mm)`) %>%
-  filter(`tumor.length.(mm)` != "not present") %>%
-  mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
-         `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
-  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
-         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
-         condition =  "Fitness:DL017",
-         treatment = ifelse(grepl("1$", `cage (treatment)`), "IgG",
-                            ifelse(grepl("2$", `cage (treatment)`), "IgG", "PD1")),
-         treatment.group = paste(treatment, condition, sep = " x ")) %>%
-  mutate(tail.number = paste0(tail.number, `cage (treatment)`)) %>%
-  calcTumorVol()
-
-mim4 <- tsize.raw[[4]] %>%
-  drop_na(`tumor.length.(mm)`) %>%
-  mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
-         `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
-  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
-         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
-         treatment.group = paste(microbiome.sample, Treatment, sep = "/"),
-         tail.number = paste(tail.number, cage)) %>%
-  calcTumorVol()
+# zero.vals <- c("n/a", "N/A")
+# 
+# mim1 <- tsize.raw[[1]] %>%
+#   mutate(`tumor.length.(mm)` = ifelse(is.na(`tumor.length.(mm)`), 0, `tumor.length.(mm)`),
+#           `tumor.width.(mm)` = ifelse(is.na(`tumor.width.(mm)`), 0, `tumor.width.(mm)`)) %>%
+#   mutate(condition = dplyr::if_else(grepl("v3", microbiome.sample),
+#                                    true = "mimic1.pre-DI",
+#                                    false = "mimic1.post-DI"),
+#          treatment.group = paste(treatment, condition, sep = " x ")) %>%
+#   calcTumorVol()
+# 
+# mim2 <- tsize.raw[[2]] %>%
+#   drop_na(`tumor.length.(mm)`) %>%
+#   mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
+#          `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
+#   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+#          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+#          treatment.group = paste(gsub(".-(.*)", "\\1", `cage (treatment)`),
+#                                  microbiome.sample, sep = " x ")) %>%
+#   calcTumorVol()
+# 
+# # Problem: need to split mouse ids by cage
+# mim3 <- tsize.raw[[3]] %>%
+#   drop_na(`tumor.length.(mm)`) %>%
+#   filter(`tumor.length.(mm)` != "not present") %>%
+#   mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
+#          `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
+#   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+#          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+#          condition =  "Fitness:DL017",
+#          treatment = ifelse(grepl("1$", `cage (treatment)`), "IgG",
+#                             ifelse(grepl("2$", `cage (treatment)`), "IgG", "PD1")),
+#          treatment.group = paste(treatment, condition, sep = " x ")) %>%
+#   mutate(tail.number = paste0(tail.number, `cage (treatment)`)) %>%
+#   calcTumorVol()
+# 
+# mim4 <- tsize.raw[[4]] %>%
+#   drop_na(`tumor.length.(mm)`) %>%
+#   mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
+#          `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
+#   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+#          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+#          treatment.group = paste(microbiome.sample, Treatment, sep = "/"),
+#          tail.number = paste(tail.number, cage)) %>%
+#   calcTumorVol()
 
 ```
 
 ```{r}
-mean.vals <- bind_rows(mim1, mim2, mim3, mim4) %>%
+mean.vals <- tsizes %>%
+  mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x ")) %>%
   group_by(treatment.group, time.point) %>%
   summarise(mean.volume = mean(tumor.volume),
             sd.volume = sd(tumor.volume)) %>%
@@ -119,7 +118,7 @@ mean.vals %>%
                 width = 1)
 
 
-write.csv(mean.vals, "../shiny-apps/tumor-line-plots/mean-tumor-volumes.csv", row.names = F)
+write.csv(mean.vals, "../shiny-apps/tumor-line-plots/2022-01-24_mean-tumor-volumes.csv", row.names = F)
 ```
 
 
