--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -18,11 +18,11 @@ source("00-paths.R")
 # Load data 
 
 ```{r}
-tsize.files <- list.files(file.path(paths$box, 'data'), pattern = "AOT", full.names = T)[1:5]
+tsize.files <- list.files(file.path(paths$box, 'data'), pattern = "AOT", full.names = T)[1:6]
 
 tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
 
-tsize.raw <- lapply(1:5, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
+tsize.raw <- lapply(1:6, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
 ```
 
 # Functions
@@ -119,6 +119,19 @@ mim5 <- tsize.raw[[5]] %>%
   mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
          experiment = "mimic5") %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+
+mim6 <- tsize.raw[[6]] %>%
+  drop_na(`tumor.length.(mm)`) %>%
+    filter(`tumor.length.(mm)` != "n/a") %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         treatment.group = paste(Treatment,microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol() %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic6") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
 ```
 # Combine results
 
@@ -127,11 +140,12 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim2) %>%
   bind_rows(mim3) %>%
   bind_rows(mim4) %>%
-  bind_rows(mim5)
+  bind_rows(mim5) %>%
+  bind_rows(mim6)
 ```
 
 # Save
 
 ```{r}
-write.csv(mimic.cleaned, "../data/2022-02-01_tumor-size_R-formatted.csv", row.names = F)
+write.csv(mimic.cleaned, "../data/2022-02-15_tumor-size_R-formatted.csv", row.names = F)
 ```
