--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -126,7 +126,8 @@ mim6 <- tsize.raw[[6]] %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
          treatment.group = paste(Treatment,microbiome.sample, sep = " x "),
-         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+         tail.number = paste(tail.number, cage, sep = " x "),
+         date = as.POSIXct(str_replace(as.character(date), "2021", "2022"))) %>%
   calcTumorVol() %>%
   separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
   mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
@@ -147,5 +148,5 @@ mimic.cleaned <- mim1 %>%
 # Save
 
 ```{r}
-write.csv(mimic.cleaned, "../data/2022-02-15_tumor-size_R-formatted.csv", row.names = F)
+write.csv(mimic.cleaned, "../data/2022-02-22_tumor-size_R-formatted.csv", row.names = F)
 ```
