--- a/scripts/shiny_t-size_process-plot-inputs.Rmd
+++ b/scripts/shiny_t-size_process-plot-inputs.Rmd
@@ -17,7 +17,7 @@ library(tidyverse)
 # Load data 
 
 ```{r}
-tsizes <- read.csv("../data/2022-03-03_tumor-size_R-formatted.csv", stringsAsFactors = F)
+tsizes <- read.csv("../data/2022-03-22_tumor-size_R-formatted.csv", stringsAsFactors = F)
 ```
 
 
@@ -92,7 +92,7 @@ tsizes <- read.csv("../data/2022-03-03_tumor-size_R-formatted.csv", stringsAsFac
 ```{r}
 mean.vals <- tsizes %>%
   mutate(treatment.group = paste(experiment, treatment, microbiome.sample, sep = " x ")) %>%
-  group_by(treatment.group, time.point) %>%
+  group_by(treatment.group, days.from.injection) %>%
   summarise(mean.volume = mean(tumor.volume),
             sd.volume = sd(tumor.volume)) %>%
   ungroup() %>%
@@ -108,7 +108,8 @@ mean.vals <- tsizes %>%
 
 
 mean.vals %>%
-  ggplot(aes(x = time.point, y = mean.volume, group = treatment.group, color = treatment.group)) +
+  ggplot(aes(x = days.from.injection, y = mean.volume, 
+             group = treatment.group, color = treatment.group)) +
   geom_line()+
   geom_point()+
   labs(title = "Tumor Volume vs. Time for Mimic", x = "Time point", y = "Mean tumor volume") +
@@ -118,7 +119,7 @@ mean.vals %>%
                 width = 1)
 
 
-write.csv(mean.vals, "../shiny-apps/tumor-line-plots/2022-03-03_mean-tumor-volumes.csv", row.names = F)
+write.csv(mean.vals, "../shiny-apps/tumor-line-plots/2022-03-22_mean-tumor-volumes.csv", row.names = F)
 ```
 
 
