--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -18,11 +18,11 @@ source("00-paths.R")
 # Load data 
 
 ```{r}
-tsize.files <- list.files(file.path(paths$box, 'data'), pattern = "AOT", full.names = T)[1:8]
-
+tsize.files <- list.files(file.path(paths$box, 'data'), pattern = "AOT", full.names = T)
+tsize.files <- c(tsize.files[3:10], tsize.files[1])
 tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
 
-tsize.raw <- lapply(1:8, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
+tsize.raw <- lapply(1:9, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
 
 inject.dates <- read_excel(file.path(paths$box, "data", "mimic_injection_dates.xlsx"))
 ```
@@ -150,6 +150,19 @@ mim8 <- tsize.raw[[8]] %>%
   mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
          experiment = "mimic8") %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+
+mim9 <- tsize.raw[[9]] %>%
+  drop_na(microbiome.sample) %>%
+  mutate(Treatment = ifelse(cage %in% c(1,3), "Anti-PD1", "IgG"),
+         microbiome.sample = gsub("V", "v", microbiome.sample),
+         treatment.group = paste(Treatment,microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol(., as.POSIXct("2022-04-11")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic9") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+
 ```
 
 ```{r mimic 4, saved separately because it got complicated}
@@ -191,11 +204,12 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim5) %>%
   bind_rows(mim6) %>%
   bind_rows(mim7) %>%
-  bind_rows(mim8)
+  bind_rows(mim8) %>%
+  bind_rows(mim9)
 ```
 
 # Save
 
 ```{r}
-write.csv(mimic.cleaned, "../data/2022-03-22_tumor-size_R-formatted.csv", row.names = F)
+write.csv(mimic.cleaned, "../data/2022-05-09_tumor-size_R-formatted.csv", row.names = F)
 ```
