effect size bar graph

--- a/scripts/conrad_bewell_data_for_mimic.Rmd
+++ b/scripts/conrad_bewell_data_for_mimic.Rmd
@@ -9,16 +9,61 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
+library(ggplot2)
+
 
 ```
 
 ```{r}
-king <- read.csv("../data/derived/RelAbun/RelAbun_king.csv", row.names = 1)
-phyl <- read.csv("../data/derived/RelAbun/RelAbun_phyl.csv",row.names = 1)
-class <- read.csv("../data/derived/RelAbun/RelAbun_class.csv",row.names = 1)
-ord <- read.csv("../data/derived/RelAbun/RelAbun_ord.csv", row.names = 1)
-fam <- read.csv("../data/derived/RelAbun/RelAbun_fam.csv", row.names = 1)
-gen <- read.csv("../data/derived/RelAbun/RelAbun_gen.csv", row.names = 1)
-spec <- read.csv("../data/derived/RelAbun/RelAbun_spec.csv", row.names = 1)
+king <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_king.csv", row.names = 1)
+phyl <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_phyl.csv",row.names = 1)
+class <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_class.csv",row.names = 1)
+ord <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_ord.csv", row.names = 1)
+fam <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_fam.csv", row.names = 1)
+gen <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_gen.csv", row.names = 1)
+spec <- read.csv("/Users/baileyconrad/Desktop/bewell/data/derived/RelAbun/RelAbun_spec.csv", row.names = 1)
+```
+
+function to run wilcox test on pre/post BRB and return table of p-values
+```{r}
+run_wilcox <- function(level, str1, str2){
+  microbes <- colnames(level)
+  tableOfResults<-data.frame(var=microbes)
+  tableOfResults$p_wilcox <- NA
+  rownames(tableOfResults) <- microbes
+
+  tempR <- filter(level, grepl(str1, rownames(level)))
+  tempT <- filter(level, grepl(str2, rownames(level)))
+
+  for(mic in colnames(level)){
+    x <- tempR[, mic]
+    y <- tempT[, mic]
+    thiscommand <- paste("thiswilcox <- wilcox.test(x, y, paired = TRUE)")
+    eval(parse(text = thiscommand))
+    tableOfResults[mic, "p_wilcox"] <- thiswilcox$p.value
+}
+  tableOfResults <- tableOfResults %>% select(p_wilcox)
+  return(tableOfResults)
+}
+```
+
+BRB all levels
+```{r warning=FALSE}
+spec_dif <- run_wilcox(spec, "rB", "tB")
+gen_dif <- run_wilcox(gen, "rB", "tB")
+fam_dif <- run_wilcox(fam, "rB", "tB")
+ord_dif <- run_wilcox(ord, "rB", "tB")
+class_dif <- run_wilcox(class, "rB", "tB")
+phyl_dif <- run_wilcox(phyl, "rB", "tB")
+king_dif <- run_wilcox(king, "rB", "tB")
+
+#combine and filter to p-value < 0.05
+BRBresults <- rbind(king_dif, phyl_dif, class_dif, ord_dif, fam_dif, gen_dif, spec_dif) %>% filter(p_wilcox < 0.05)
+```
+
+```{r}
+BRBresults %>% ggplot(aes(x = rownames(BRBresults), y = p_wilcox)) +
+  geom_bar(stat = "identity") +
+  coord_flip()
 ```
 
